manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: yuptime
  name: yuptime
