manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api-server
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: yuptime
    app.kubernetes.io/version: 0.0.0-devel
  name: yuptime-api
  namespace: yuptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api-server
      app.kubernetes.io/name: yuptime
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api-server
        app.kubernetes.io/name: yuptime
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: development
        - name: LOG_LEVEL
          value: info
        - name: PORT
          value: "3000"
        - name: NODE_EXTRA_CA_CERTS
          value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - name: CHECKER_IMAGE
          value: ghcr.io/yuptime/yuptime-checker:latest
        - name: CHECKER_IMAGE_PULL_POLICY
          value: IfNotPresent
        - name: CHECKER_SERVICE_ACCOUNT
          value: yuptime-checker
        - name: JOB_TTL_SECONDS
          value: "120"
        - name: KUBE_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/yuptime/yuptime-api:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: api-server
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: yuptime
      volumes:
      - emptyDir: {}
        name: tmp
