manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api-server
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: yuptime
    app.kubernetes.io/version: 0.0.0-devel
  name: yuptime-api
  namespace: yuptime
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/component: api-server
    app.kubernetes.io/name: yuptime
  type: ClusterIP
