manifests/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: yuptime
    app.kubernetes.io/version: 0.0.0-devel
  name: yuptime-controller
  namespace: yuptime
spec:
  egress:
  - {}
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: yuptime
  policyTypes:
  - Ingress
  - Egress
